Update getPuchaseHistory
De paso el getOrders solo muestra las creadas (no pagas ni canceladas)